# gabocutter

./: .gitignore  404.html  Dockerfile  Makefile  README.md  compose.yml  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  docker-test.yml  main.yml  python-test.yml
docs/: index.md  prompt_arguments.md  tutorial.md
docs/features/: cicd.md  docker.md  linting.md  makefile.md  mkdocs.md  pytest.md  uv.md
features/docker/: index.html
features/linting/: index.html
features/makefile/: index.html
features/mkdocs/: index.html
features/pytest/: index.html
features/uv/: index.html
notebooks/: 00-example.qmd
prompt_arguments/: index.html
search/: search_index.json
src/gabocutter/: __init__.py
src/gabocutter/utils/: __init__.py  misc.py
tests/: test_gabocutter_utils_misc.py
tutorial/: index.html
{{cookiecutter.project_name}}/: Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: main.yml
{{cookiecutter.project_name}}/docs/: index.md
