[project]
name = "gabocutter"
version = "0.0.1"
description = "My cookiecutter template for data science projects."
authors = [{ name = "Gabriel Torres Gamez", email = "gabriel.torres@fuet.ch" }]
readme = "README.md"
keywords = ['cookiecutter', 'template', 'uv', 'datascience']
requires-python = ">=3.12,<4.0"
dependencies = [
  "cookiecutter>=2.1.1"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]


[project.urls]
Repository = "https://github.com/gabrieltorresgamez/gabocutter"
Documentation = "https://gabrieltorresgamez.github.io/gabocutter/"
Homepage = "https://gabrieltorresgamez.github.io/gabocutter/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-cookies>=0.6.1",
    "ruff>=0.6.9",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.19.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gabocutter"]

[tool.setuptools.package-data]
"gabocutter" = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S603"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
